[workspace]
resolver = "2"
members = [
  "zyx",
  "zyx-nn",
  "zyx-optim",
  "zyx-derive",
  "zyx-examples",
  "zyx-test",
  "zyx-py",
]

[workspace.package]
version = "0.13.0"
edition = "2021"

[workspace.dependencies]
zyx = { version = "0.13.0", path = "./zyx", default-features = false }
zyx-nn = { version = "0.2.0", path = "./zyx-nn", default-features = false }
zyx-optim = { version = "0.2.0", path = "./zyx-optim", default-features = false }
zyx-derive = { version = "0.2.0", path = "./zyx-derive", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = false
debug = 0
