[workspace]
resolver = "2"
members = [
  "zyx",
  "zyx-nn",
  "zyx-io",
  "zyx-optim",
  "zyx-derive",
  "zyx-examples",
  "zyx-py", "zyx-io",
]

[workspace.package]
version = "0.13.0"
edition = "2021"

[workspace.dependencies]
zyx = { version = "0.13.0", path = "./zyx", default-features = false }
zyx-io = { version = "0.1.0", path = "./zyx-io", default-features = false }
zyx-nn = { version = "0.2.0", path = "./zyx-nn", default-features = false }
zyx-optim = { version = "0.2.0", path = "./zyx-optim", default-features = false }
zyx-derive = { version = "0.2.0", path = "./zyx-derive", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = false
debug = 0
