[package]
name = "zyx-core"
version = "0.1.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx core utilities"
documentation = "https://docs.rs/zyx-core"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[dev-dependencies]
zyx-opencl = { version = "0.1.0", path = "../zyx-opencl" }

[features]
default = ["std"]
std = []
