[package]
name = "zyx-core"
version.workspace = true
edition.workspace = true
authors = ["zk4x"]
description = "Zyx core utilities"
documentation = "https://docs.rs/zyx-core"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
zyx-opencl = { workspace = true }

[features]
default = ["std"]
std = []
