[package]
name = "zyx-cpu"
version = "0.1.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx cpu backend"
documentation = "https://docs.rs/zyx-cpu"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx-core = { version = "*", path = "../zyx-core", default-features = false }
rayon = { version = "1.8.1", default-features = false, optional = true }

[features]
default = ["std"]
std = ["zyx-core/std", "rayon"]
