[package]
name = "zyx-derive"
version = "0.2.0"
edition.workspace = true
authors = ["zk4x"]
description = "Zyx procedural macros"
documentation = "https://docs.rs/zyx-derive"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx = { workspace = true }
syn = { version = "2.0.49", features = ["full", "fold"] }
quote = { version = "1.0.35" }

[lib]
proc-macro = true

[features]
std = ["zyx/std"]
