[package]
name = "zyx-derive"
version = "0.2.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx procedural macros"
documentation = "https://docs.rs/zyx-derive"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "AGPL-3.0-only"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx = { path = "../zyx" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
