[package]
name = "zyx-examples"
version = "0.2.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx examples"
documentation = "https://docs.rs/zyx-torch"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx = { version = "*", path = "../zyx" }
zyx-nn = { version = "*", path = "../zyx-nn" }
zyx-optim = { version = "*", path = "../zyx-optim" }
serde = { version = "*" }
tokenizers = { version = "*" }
clap = { version = "4.5.21", features = ["derive"] }
rand = { version = "*" }
csv = { version = "1.3.1" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = 3
#strip = true
debug-assertions = false
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
#codegen-units = 1
debug = 1
