[package]
name = "zyx-examples"
version = "0.2.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx examples"
documentation = "https://docs.rs/zyx-torch"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "AGPL-3.0-only"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[profile.dev]
opt-level = 2
lto = "off"

[profile.release]
opt-level = 2
strip = true
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = true
codegen-units = 16
debug = 0

#[profile.release]
#opt-level = 3
#strip = true
#debug-assertions = false
#overflow-checks = false
#lto = "fat"
#panic = "unwind"
#incremental = false
#codegen-units = 1
#debug = 0

[dependencies]
zyx = { version = "*", path = "../zyx", features = [] }
zyx-nn = { version = "*", path = "../zyx-nn" }
zyx-optim = { version = "*", path = "../zyx-optim" }

serde = { version = "*", optional=true }
tokenizers = { version = "0.21.2", optional=true }
clap = { version = "*", features = ["derive"], optional=true }
rand = { version = "*", optional=true }
csv = { version = "*", optional=true }
half = { version = "*", optional=true }

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "phi"
path = "examples/phi.rs"
required-features = ["phi-example"]

[features]
phi-example = ["serde", "tokenizers", "clap", "rand", "csv", "half"]
