[package]
name = "zyx-test"
version = "0.2.0"
edition.workspace = true
authors = ["zk4x"]
description = "Zyx testing binary"
#documentation = "https://docs.rs/zyx-test"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx = { workspace = true}
#zyx = { version = "0.13.0", path = "../zyx" }
zyx-optim = { workspace = true}
#zyx-optim = { version = "0.2.0", path = "../zyx-optim" }
zyx-nn = { workspace = true}
#zyx-nn = { version = "0.2.0", path = "../zyx-nn" }
itertools = { version = "0.13.0" }
rand = { version = "0.8.5" }
