[package]
name = "zyx-io"
version = "0.1.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx io traits"
documentation = "https://docs.rs/zyx-io"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]

[features]
