[package]
name = "zyx-nn"
version = "0.2.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx nn modules"
documentation = "https://docs.rs/zyx-nn"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx = { version = "0.13.1", features = [
    "rand",
], path = "/home/x/Dev/rust/zyx/zyx" }
zyx-derive = { path = "../zyx-derive" }
