[package]
name = "zyx-nn"
version = "0.2.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx nn modules"
documentation = "https://docs.rs/zyx-nn"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "AGPL-3.0-only"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx = { version = "0.15.0", path = "../zyx" }
zyx-derive = { path = "../zyx-derive" }
