[package]
name = "zyx-opencl"
version = "0.1.0"
edition = "2021"
authors = ["zk4x"]
description = "Machine learning tensor library"
documentation = "https://docs.rs/zyx-opencl"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx-core = { version = "*", path = "../zyx-core", default-features = false }
opencl-sys = { version = "0.2.8", default-features = false }

[features]
default = ["std", "debug1"]
debug1 = []
std = ["zyx-core/std"]
