[package]
name = "zyx-opencl"
version = "0.1.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx OpenCL backend"
documentation = "https://docs.rs/zyx-opencl"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx-core = { version = "0.1.0", path = "../zyx-core", default-features = false }
opencl-sys = { version = "0.2.8", default-features = false }

[features]
default = ["std", "debug1"] #, "CL_VERSION_1_1", "CL_VERSION_1_2", "debug1"]
debug1 = []
std = ["zyx-core/std"]
CL_VERSION_1_1 = ["opencl-sys/CL_VERSION_1_1"]
CL_VERSION_1_2 = ["opencl-sys/CL_VERSION_1_2"]
CL_VERSION_2_1 = ["opencl-sys/CL_VERSION_2_1"]
