[package]
name = "zyx-optim"
version = "0.2.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx optimizers"
documentation = "https://docs.rs/zyx-optim"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "AGPL-3.0-only"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx = { version = "*", path = "../zyx" }
zyx-derive = { version = "*", path = "../zyx-derive" }
