[package]
name = "zyx-test"
version.workspace = true
edition.workspace = true
authors = ["zk4x"]
description = "Zyx testing binary"
#documentation = "https://docs.rs/zyx-test"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx-core = { version = "*" }
zyx-optim = { version = "*"}
zyx-nn = { version = "*"}
zyx-opencl = { version = "*"}
zyx-cpu = { version = "*" }
zyx-torch = { version = "*" }
itertools = { version = "0.12.1" }
rand = { version = "0.8.5" }
