[package]
name = "zyx-test"
version.workspace = true
edition.workspace = true
authors = ["zk4x"]
description = "Zyx testing binary"
#documentation = "https://docs.rs/zyx-test"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx-core = { version = "*", path = "../zyx-core" }
zyx-optim = { version = "*", path = "../zyx-optim" }
zyx-nn = { version = "*", path = "../zyx-nn" }
zyx-opencl = { version = "*", path = "../zyx-opencl" }
zyx-cpu = { version = "*", path = "../zyx-cpu" }
itertools = { version = "0.12.1" }
rand = { version = "0.8.5" }
