[package]
name = "zyx-torch"
version = "0.1.0"
edition = "2021"
authors = ["zk4x"]
description = "Zyx libtorch backend"
documentation = "https://docs.rs/zyx-torch"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
zyx-core = { version = "0.1.0", default-features = false }
tch = { version = "0.15.0", default-features = false }

[features]
default = ["std"]
std = ["zyx-core/std"]
download-libtorch = ["tch/download-libtorch"]
