[package]
name = "zyx"
version = "0.15.0"
edition = "2024"
authors = ["zk4x"]
description = "Zyx machine learning library"
documentation = "https://docs.rs/zyx"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "AGPL-3.0-only"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
#parking_lot = { version ="*" } # Good for debugging, since std::mutex::Mutex sucks
# Good, well written minimal dependencies
# libloading is used to access cuda, opencl and hsa runtimes
libloading = { version = "0.9.0", default-features = false, features = ["std"] } # ISC
# nanoserde is used to read backend config
nanoserde = { version = "0.2.1", default-features = false, features = ["std", "binary", "json"] }

# To be removed
# Support for f16 and bf16 dtypes, stick to version 1.8.3, which does not have absurd number of dependencies
half = { version = "1.8.3", default-features = false, features = ["std"] } # MIT or Apache 2.0

# Lot of dependencies from wgpu, probably just don't use that
wgpu = { version = "27.0.1", default-features = false, features = ["wgsl", "vulkan", "metal", "dx12"], optional = true } # MIT or Apache 2.0
pollster = { version = "0.4.0", default-features = false, optional = true } # MIT or Apache 2.0

# Pyo3 is used only for python bindings
pyo3 = { version = "0.25.1", optional = true, features = ["extension-module", "auto-initialize"] } # MIT or Apache 2.0
paste = "1.0.15" # MIT or Apache 2.0

# Vulkano, will be later removed, once we sort out direct vulkan bindings
#vulkano = { version = "*", optional = true }

[lib]
crate-type = ["lib"] #, "cdylib"]

[features]
default = [
    "wgpu",
    #"py",
]

# Enables wgpu backend
wgpu = ["dep:wgpu", "dep:pollster"]

# Enables vulkan backend, dependency will be later removed
#vulkan = ["dep:vulkano"]

# Enables us to create python bindings with pyo3, annotates structs with pyclass
py = ["dep:pyo3"]

# Optimize for linking time, 'cause linker is so slow...
[profile.dev] # Modify profile settings via config.
opt-level = 0 # Optimization level.
debug = true  # Include debug info.
#split-debuginfo = '...'  # Debug info splitting behavior.
strip = false            # Removes symbols or debuginfo.
debug-assertions = true  # Enables debug assertions.
overflow-checks = true   # Enables runtime integer overflow checks.
lto = false              # Sets link-time optimization.
panic = 'unwind'         # The panic strategy.
incremental = true       # Incremental compilation.
codegen-units = 16       # Number of code generation units.
#rpath = false           # Sets the rpath linking option.

[profile.release]
opt-level = 3            # Also "z" is quite fine
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
debug = 0
