[package]
name = "zyx"
version = "0.15.6"
edition = "2024"
authors = ["zk4x"]
description = "Zyx machine learning library"
documentation = "https://docs.rs/zyx"
readme = "README.md"
homepage = "https://github.com/zk4x/zyx"
repository = "https://github.com/zk4x/zyx"
license = "LGPL-3.0-only"
keywords = ["tensor", "deep-learning", "neural-network", "autodiff"]
categories = ["computer-vision", "science"]
include = [
    "src/**",
    "tests/1_unary.rs",
    "tests/2_binary.rs",
    "tests/3_movement.rs",
    "tests/4_reduce.rs",
    "tests/5_misc.rs",
    "tests/6_autograd.rs",
    "tests/7_realize.rs",
    "tests/8_indexing.rs",
    "Cargo.toml",
    "README.md"
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Good, well written minimal dependencies
# libloading is used to access cuda, opencl and hsa runtimes
libloading = { version = "0.9.0", default-features = false, features = ["std"] } # ISC
# nanoserde is used to read backend config
nanoserde = { version = "0.2.1", default-features = false, features = ["std", "binary", "json"] }

# libc is used by tenstorrent backend for mmap/munmap
libc = { version = "0.2", default-features = false, optional = true }

# Lot of dependencies from wgpu, probably just don't use that
wgpu = { version = "29.0.1", default-features = false, features = ["vulkan", "metal", "dx12", "spirv", "gles"], optional = true } # MIT or Apache 2.0
pollster = { version = "0.4.0", default-features = false, optional = true } # MIT or Apache 2.0

# Pyo3 is used only for python bindings
pyo3 = { version = "0.29.0", optional = true, features = ["extension-module", "generate-import-lib"] } # MIT or Apache 2.0

[dev-dependencies]
matrixmultiply = "0.3"

[lib]
crate-type = ["lib"]

[features]
default = [
    #"tenstorrent",
    #"wgpu",
    #"py",
    #"time"
]

# Enables C/Clang CPU backend
# Enables tenstorrent backend (Blackhole)
tenstorrent = ["dep:libc"]

# Enables wgpu backend
wgpu = ["dep:wgpu", "dep:pollster"]

# Enables us to create python bindings with pyo3, annotates structs with pyclass
py = ["dep:pyo3"]

# Enables timing for optimization passes
time = []

# Optimize for linking time, 'cause linker is so slow...
[profile.dev] # Modify profile settings via config.
opt-level = 0 # Optimization level.
debug = false  # Include debug info.
#split-debuginfo = '...'  # Debug info splitting behavior.
strip = false            # Removes symbols or debuginfo.
debug-assertions = true  # Enables debug assertions.
overflow-checks = true   # Enables runtime integer overflow checks.
lto = false              # Sets link-time optimization.
panic = 'unwind'         # The panic strategy.
incremental = true       # Incremental compilation.
codegen-units = 16       # Parallelize LLVM codegen for faster debug builds.
#rpath = false           # Sets the rpath linking option.

[profile.test]
opt-level = 1
debug = false
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16

[profile.release]
opt-level = 3            # Also "z" is quite fine
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
debug = 0
